--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -17,9 +17,10 @@
   align-items: center;
   justify-content: center;
 }
-body {
+body,
+html {
   width: 100vw;
-  height: 100vh;
+  height: 101vh;
   display: flex;
   overflow: hidden;
 }
