Calender Slider and new api for data added

--- a/assets/styles/mapSection.css
+++ b/assets/styles/mapSection.css
@@ -155,6 +155,7 @@
   stroke-width: 0.4px;
   position: relative;
   z-index: 20;
+  fill: transparent;
 }
 .map-section-map .map svg path:hover {
   fill: var(--yellow);
