--- a/assets/styles/table.css
+++ b/assets/styles/table.css
@@ -99,11 +99,11 @@
 
 .cases-info-section-part-2 {
   width: 80%;
-  height: 50%;
+  height: 45%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 .cases-info-pannel {
   width: 103%;
@@ -117,7 +117,7 @@
 }
 .cases-info-pannel button {
   /* border: 1px solid var(--white-grey); */
-  padding: 1.3em 3em;
+  padding: 2em 3em;
   background: var(--light-grey);
   outline: none;
   color: var(--white-grey);
@@ -167,7 +167,7 @@
 }
 .cases-info-section-part-3 {
   width: 100%;
-  height: 40%;
+  height: 35%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -175,15 +175,15 @@
 }
 .graph {
   width: 95%;
-  height: 50%;
+  height: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 #curve_chart {
-  width: 20em;
-  height: auto;
+  width: 25em;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -193,7 +193,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 30%;
+  width: 40%;
   height: 20%;
 }
 .added span {
@@ -208,32 +208,8 @@
   font-weight: 300;
 }
 .added .added-date {
+  padding-left: 12px;
   font-size: 14px;
   font-weight: 300;
   color: var(--white-grey);
-}
-.cases-section-three-btn {
-  width: 100%;
-  height: 30%;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-.cases-section-three-btn button:first-of-type {
-  padding: 0.8rem 2rem;
-  margin-right: 0.8rem;
-  outline: none;
-  border: none;
-  background: var(--yellow);
-  font-weight: 500;
-  color: white;
-  text-shadow: 0.2px 0.2px 10px black;
-}
-.cases-section-three-btn button:nth-of-type(2) {
-  padding: 0.8rem 2rem;
-  outline: none;
-  border: none;
-  color: var(--white-grey);
-  font-weight: 500;
-  text-shadow: 0.2px 0.2px black;
 }
