--- a/assets/styles/mapSection.css
+++ b/assets/styles/mapSection.css
@@ -166,6 +166,7 @@
   position: absolute;
   bottom: 5%;
   left: 20%;
+  z-index: 600;
 }
 .map-section-buttons button {
   width: 3.5em;
@@ -176,4 +177,59 @@
   border: none;
   outline: none;
   font-size: 1em;
+}
+.search-modal {
+  display: none;
+}
+.search-modal-new {
+  width: 80vw;
+  height: 80vh;
+  background-color: #0000009d;
+  backdrop-filter: blur(5px);
+  position: absolute;
+  z-index: 1050;
+  top: 10vh;
+  display: flex;
+  color: white;
+  align-items: flex-end;
+  justify-content: space-around;
+}
+.searchBarModal {
+  position: relative;
+  bottom: 65vh;
+  left: -30vw;
+}
+.closeModal {
+  position: relative;
+  bottom: 75vh;
+  left: -2vw;
+}
+.searchCountryBtn {
+  position: relative;
+  bottom: 5vh;
+  right: 38vw;
+}
+.search-modal ul {
+  position: relative;
+  width: 80%;
+  height: 60%;
+  left: 7vw;
+  top: -5vw;
+  list-style: none;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+.search-modal ul li {
+  position: relative;
+  background: #2b2a2a8a;
+  backdrop-filter: blur(3px);
+  width: 100%;
+  height: 30px;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
 }
