--- a/public/assets/styles/mapSection.css
+++ b/public/assets/styles/mapSection.css
@@ -139,6 +139,7 @@
   z-index: 0;
   bottom: -1%;
   left: 12%;
+  overflow: hidden;
 }
 .map {
   display: flex;
@@ -306,10 +307,8 @@
     position: relative;
     left: 50%;
   }
-  /* 
- 
+
   .map-section-map {
-    all: unset;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -318,16 +317,19 @@
   .map-dots {
     all: unset;
     position: absolute;
+    top: 20%;
+    z-index: 5;
   }
   .map-dots svg {
-    all: unset;
+    width: 100%;
+    height: 100%;
   }
-  /* .map {
+  .map {
     position: relative;
-    z-index: 25;
+    overflow: scroll;
   }
   .map svg {
     width: 100%;
     height: 100%;
-  } */
+  }
 }
