--- a/public/assets/styles/mapSection.css
+++ b/public/assets/styles/mapSection.css
@@ -309,24 +309,27 @@
   }
 
   .map-section-map {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     align-items: center;
     justify-content: center;
   }
 
   .map-dots {
     all: unset;
-    position: absolute;
-    top: 20%;
-    z-index: 5;
+    position: relative;
+    display: none;
   }
-  .map-dots svg {
-    width: 100%;
-    height: 100%;
-  }
+
   .map {
     position: relative;
     overflow: scroll;
+    display: grid;
+    grid-column-start: 1;
+    grid-row-start: 1;
+    grid-column-end: 2;
+    grid-row-end: 2;
   }
   .map svg {
     width: 100%;
