--- a/public/assets/styles/table.css
+++ b/public/assets/styles/table.css
@@ -214,3 +214,54 @@
   font-weight: 300;
   color: var(--white-grey);
 }
+@media only screen and (max-width: 600px) {
+  .cases-info-section {
+    all: unset;
+    position: relative;
+    top: 80vw;
+    width: 100%;
+    height: 120%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+  }
+  .cases-info-section-part-1 {
+    width: 100%;
+    height: 40%;
+  }
+  .cases-info-section-part-1 h1 {
+    width: 100%;
+    height: 25%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    text-align: center;
+  }
+  .cases-info-section-part-1 .calender {
+    width: 100%;
+    height: 75%;
+  }
+  .cases-info-section-part-2 {
+    padding-top: 3em;
+    width: 80%;
+    height: 80%;
+  }
+  .cases-info-section-part-3 {
+    width: 80%;
+    height: 40%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+  .graph {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+  .graph .curve_chart {
+    width: 80%;
+  }
+}
